--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "zapbot",
+  "name": "zapteccbot",
   "version": "1.0.0",
-  "description": "Simple Twitch bot",
+  "description": "Simple Twitch bot that probably doesn't work",
+  "repository": "https://github.com/Zaptecc/ZapteccBot",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +10,7 @@
   "author": "Zaptecc",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.0.2",
+    "discord.js": "^12.1.1",
     "tmi.js": "^1.5.0"
   }
 }
